--- a/ImageList/Views/ImageView/Index.cshtml
+++ b/ImageList/Views/ImageView/Index.cshtml
@@ -1,35 +1,59 @@
-﻿@model IEnumerable<ImageView>
-  @{ ViewData["Title"] = "Index"; }
+﻿@using ImageList.Models;
+@model IEnumerable<ImageView>;
+@{
+    ViewData["Title"] = "Index";
+}
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $(".list").click(function () {
+            alert(this.textContent)
+          //alert(this.textContent)
+      });
+    });
+  </script>
   <body>
-  <div class="container p-3">
-    <div class="row">
-      <div class="col" >
-        <ul class="list-group-item-primary ">
-          @foreach (var obj in Model) { if (obj.Extension!="") {
-          <ul>
-            <li><a href="@obj.Path">@obj.Name</a></li>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col">
+          <ul class="list-group-item-primary list">
+                @foreach(var obj in Model)
+                {
+                    <li>@obj.Name</li>
+                    <ul>
+                            <li>@obj.GUID</li>
+                    </ul>
+                }
           </ul>
-          continue; }
-          <li><a href="@obj.Path">@obj.Name</a></li>
-          }
-        </ul>
-      </div>
-      <div class="form-group border col ">
-        <img
-          id="manipulableImage"
-          src="https://media.wired.com/photos/598e35994ab8482c0d6946e0/master/w_1920,c_limit/phonepicutres-TA.jpg"
-          alt="Image place holder"
-          class="img-fluid rounded float-right"
-          style="display: none"
-        />
-         <canvas style="display: block;
-    margin: 1em auto;
-    background: #fff;
-    border: 1px solid #ccc" class="rounded"></canvas>
+        </div>
+        <div class="form-group border col">
+          <img
+            id="manipulableImage"
+            src="file:///C:\Users\4R4S8\Pictures\test\3.jpg"
+            alt="Image place holder"
+            class="img-fluid rounded float-right"
+            style="display: none"
+          />
+          <canvas
+            style="
+              display: block;
+              margin: 1em auto;
+              background: #fff;
+              border: 1px solid #ccc;
+            "
+            class="rounded"
+          ></canvas>
+        </div>
       </div>
     </div>
-  </div>
- 
-  <script src="~/js/site.js"></script>
-</body>
+    <a asp-controller="ImageView" asp-action="Add" class="btn btn-primary">Add Image</a>
+    <script src="~/js/site.js"></script>
+     <img
+            id="manipulableImage"
+            src="C:\Users\4R4S8\Pictures\test\3.jpg"
+            alt="Image place holder"
+            class="img-fluid rounded float-right"
+          />
+  </body>
+
