--- a/ImageList/Views/ImageView/Add.cshtml
+++ b/ImageList/Views/ImageView/Add.cshtml
@@ -1,4 +1,11 @@
 ﻿@model ImageView
+<head>
+    <div class="container p-3">
+        
+    </div>
+</head>
+<body class="align-content-center">
+
 
 <form method="post">
     <div class="border p-3 mt-4 align-content-center">
@@ -18,9 +25,11 @@
                         @*<input asp-for="ImageFile" name="ImageFile" type="file" class="input-group-text" id="imageUpload" accept="image/* >*@
                         <input asp-for="Path" type="text"></input>
                         @*<span asp-validation-for="ImageFile" class="text-danger"></span>*@
-                        <label class="custom-file-label" for="imageUpload">Choose multiple images</label>
+                        @*<label class="custom-file-label" for="imageUpload">Choose multiple images</label>
+                        <label class="custom-file-label" for="imageUpload">Choose multiple images</label>*@
                     </div>
                     <br>
+
                     <button type="submit" class="btn btn-primary mt-2">Upload Images</button>
                 </form>
                 
@@ -29,4 +38,5 @@
         </body>
     </div>
 </form>
+</body>
 
