--- a/ImageList/Views/ImageView/Index.cshtml
+++ b/ImageList/Views/ImageView/Index.cshtml
@@ -1,17 +1,9 @@
-﻿@using ImageList.Models;
-@model IEnumerable<ImageView>;
+﻿@using ImageList.ViewModels
+@model ViewModel
 @{
     ViewData["Title"] = "Index";
 }
 <heads>
-    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-  <script>
-    //$(document).ready(function () {
-    //  $("#list").click(function () {
-    //        alert(this.textContent)
-    //  });
-    //});
-  </script>
     <div class="container p-3">
 </div>
 </heads>
@@ -19,26 +11,38 @@
     <div class="container p-3">
       <div class="row">
         <div class="col">
-          <ul class="list-group-item-primary" id="list">
-                @foreach(var obj in Model)
-                {
-                        <li data="@obj.GUID"><a href="/ImageView/Show/@obj.GUID">@obj.Name</a></li>
-                    if (obj.Extension==""){
-                        <ul>
-                                <li><a>@obj.Name</a></li>
-                        </ul>
+          <ul class="list-group-item-primary">
+              @if (Model.ImageListCollection!=null)
+                    {
+                        @foreach (var obj in Model.ImageListCollection)
+                        {
+                            <li data="@obj.GUID"><a href="/ImageView/Index/@obj.GUID">@obj.Name</a></li>
+                            if (obj.Extension == "")
+                            {
+                                <ul>
+                                    <li data="@obj.GUID"><a>@obj.Name</a></li>
+                                </ul>
+                            }
+                        }
                     }
-                }
+              
           </ul>
         </div>
         <div class="form-group border col">
-          <img
-            id="manipulableImage"
-            src=""
-            alt="Image place holder"
-            class="img-fluid rounded float-right"
-            style="display: block"
-          />
+            @{
+                    if (Model.ImageViewCollection!=null)
+                    {
+                        <img
+                         src="data:image/*;Base64,@Convert.ToBase64String(Model.ImageViewCollection)" alt="Image"
+                         class="img-fluid rounded float-right"
+                         style="display: block" />
+                    }
+                    else
+                    {
+                            
+                    }
+            }
+          
       @*    <canvas
             style="
               display: block;
